k8s/examples/wordpress/wordpress/25-wp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      serviceAccountName: wordpress
      containers:
      - name: wordpress
        image: wordpress:5.2-apache
        ports:
        - name: wordpress
          containerPort: 80
        volumeMounts:
        - name: wp-docroot
          mountPath: /var/www/html/
      volumes:
      - name: wp-docroot
        persistentVolumeClaim:
          claimName: wp-docroot
