k8s/examples/wordpress/wordpress/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  externalTrafficPolicy: Local
  ports:
    - port: 8080
      targetPort: 80
      name: wordpress
      protocol: TCP
      name: http
  selector:
    app: wordpress
    tier: frontend
  type: NodePort # We use NodePort by default, but can use LoadBalancer
