k8s/examples/wordpress/wordpress/25-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: test-ingress
  labels:
    app: wordpress
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx" # not sure if this works on ovirt but works with rancher
    #kubernetes.io/ingress.allow-http: "true"
    # ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /*
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: wordpress
            servicePort: 8080
